# prompt-parole

./: .gitignore  LICENSE  README.md  pyproject.toml
desktop/: Cargo.toml
desktop/src/: main.rs
src/prompt_parole/: __init__.py  app.py  cli.py  crypto.py  errors.py  gui.py  hooks.py  install.py  paths.py  policy.py  storage.py
tests/: test_app.py  test_cli.py  test_crypto.py  test_gui.py  test_hooks.py  test_install.py  test_policy.py
