[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "prompt-parole"
version = "0.1.0"
description = "A curfew gate for Claude Code and Codex prompts."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Prompt Parole contributors" }
]
keywords = ["claude-code", "codex", "hooks", "productivity", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities"
]

[project.scripts]
prompt-parole = "prompt_parole.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_parole"]
