[package]
name = "prompt-parole"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust CLI and native desktop GUI for Prompt Parole."

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.53", features = ["derive"] }
constant_time_eq = "0.4.2"
dirs = "6.0.0"
eframe = "0.34.3"
egui = "0.34.3"
image = { version = "0.25", default-features = false, features = ["png"] }
libc = "0.2.177"
portable-pty = "0.9.0"
rand = "0.9.2"
rpassword = "7.4.0"
scrypt = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
terminal_size = "0.4.4"
tempfile = "3.25.0"

[[bin]]
name = "prompt-parole"
path = "src/main.rs"
